--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@ This is my first file in git hub
 I should be ablt to push it successfully
 
 This is my second project in github2 and i am connecting my linux machine to git hub.
+This is to test E-mail notification 
